# pytest-youqu-playwright

./: .env  Pipfile  README.md  publish.sh  pyproject.toml  test.py
pytest_youqu_playwright/: __init__.py  __version__.py  conf.py
