[project]
name = "pytest-youqu-playwright"
description = "pytest-youqu-playwright"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "pytest",
    "playwright",
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/pytest_youqu_playwright.py",
]

